[gd_scene load_steps=2 format=3 uid="uid://dm0rjwewtf2o0"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_mqatc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mqatc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -50.5
offset_right = 46.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="BtnPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="BtnCharacters" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Characters"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCharacters" to="." method="_on_btn_characters_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
